@@ -2,7 +2,7 @@
 if (!defined('TYPO3_MODE')) {
 	die ('Access denied.');
 }
-t3lib_extMgm::addStaticFile($_EXTKEY,'static/gmap3/', 'gmap3');
+t3lib_extMgm::addStaticFile($_EXTKEY,'pi1/static/', 'gmap3');
 
 
 t3lib_div::loadTCA('tt_content');
