@@ -1,0 +1,43 @@
+plugin.tx_icsgmap3_pi1 {
+	# cat=plugin.tx_icsgmap3_pi1/file/a; type=file[html]; label=Template to use: The template file to use.
+	templateFile = EXT:ics_gmap3/res/template_gmap3.html
+	
+	# cat=plugin.tx_icsgmap3_pi1/other/a; type=string; label=Providers list to use: Providers list to use.
+	provider =
+	
+	# cat=plugin.tx_icsgmap3_pi1/other/b; type=string; label=JS Libs to include: JS Libs to include.
+	includeLibJS = gmap_api,gmap3
+	
+	# cat=plugin.tx_icsgmap3_pi1/configuration/a; type=string; label=Map Unique Key: Map Unique Key.
+	mapId = gmap3
+	
+	# cat=plugin.tx_icsgmap3_pi1/configuration/b; type=int; label=Map Width: Map Width.
+	width = 500
+	
+	# cat=plugin.tx_icsgmap3_pi1/configuration/c; type=int; label=Map Height: Map Height.
+	height = 500
+	
+	# cat=plugin.tx_icsgmap3_pi1/configuration/d; type=int; label=Map Default Latitude: Map Default Latitude.
+	lat = 
+	
+	# cat=plugin.tx_icsgmap3_pi1/configuration/e; type=int; label=Map Default Longitude: Map Default Longitude.
+	lng =
+
+	# cat=plugin.tx_icsgmap3_pi1/configuration/f; type=int; label=Map Default Zoom: Map Default Zoom.
+	zoom = 13
+	
+	# cat=plugin.tx_icsgmap3_pi1/configuration/g; type=string; label=Map Type: Map Default Type.
+	type = google.maps.MapTypeId.ROADMAP
+	
+	# cat=plugin.tx_icsgmap3_pi1/configuration/h; type=string; label=Map Control Type: Map Default Control Type.
+	type_controls = show
+	
+	# cat=plugin.tx_icsgmap3_pi1/configuration/i; type=string; label=Map Navigation Control: Map Default Navigation Control.
+	nav_controls = google.maps.ZoomControlStyle.SMALL
+	
+	# cat=plugin.tx_icsgmap3_pi1/configuration/j; type=string; label=Map scrollwheel: Map scrollwheel.
+	scrollwheel = show
+	
+	# cat=plugin.tx_icsgmap3_pi1/configuration/k; type=string; label=Map streetview control: Map streetview control.
+	streetview_control = show
+}
