@@ -1,3 +1,15 @@
+2012-02-20 Emilie Sagniez <emilie@in-cite.net>
+	* Add Typoscript Configuration
+	* Merge TS Configuration with Flexform Configuration
+	* Create new javascript function to ics.TagList: addToContainer
+	* Move static/gmap3/ to pi1/static/
+
+2012-01-25 Emilie Sagniez <emilie@in-cite.net>
+	* Change tt_address coordinates field to two fields: latitude and longitude
+WARNING: En cas de mise à jour, il faut remplir les 2 nouveaux champs par l'ancien
+	* Add rggooglemap wizard in tt_address edition BE if extension is loaded
+
+... Missing changes ...
 
 2011-12-02 Pierrick Caillon <pierrick@in-cite.net>
 	* Refactoring: Transformed tag list provider's JS functions to an object. (not tested)
